移动端去除控制台

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -177,9 +177,6 @@
   div#travellings_button
     display: none !important
 
-  #randomPost_button
-    display: none !important
-
 #nav 
   #blog_name,
   .mask-name-container,
@@ -717,7 +714,7 @@
     border-bottom none
     background var(--anzhiyu-background)
   #page-header #nav #nav-right div
-    margin-left 1rem
+    margin-left .5rem
 
 @media screen and (min-width: 768px)
   .menus_item:hover > a.site-page
