--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -256,6 +256,8 @@ hr
       else
         @extend .anzhiyufont
 
+html
+  overflow-y: overlay;
 .table-wrap
   overflow-x: scroll
   margin: 1rem 0;
