--- a/source/css/_search/algolia.styl
+++ b/source/css/_search/algolia.styl
@@ -11,6 +11,10 @@
         color: var(--search-input-color)
         &:focus
           border: var(--style-border-hover)
+    .search-dialog-title
+      font-weight: 700;
+      color: var(--anzhiyu-main);
+
 
     .ais-Hits-list
       margin: 0
@@ -104,7 +108,7 @@
 
 #algolia-search .search-dialog:hover
   border: var(--style-border-hover);
-  box-shadow: var(--heo-shadow-theme);
+  box-shadow: var(--anzhiyu-shadow-theme);
   +maxWidth768()
     border: var(--style-border)
 
