优化加载动画 优化运营模式按钮

--- a/source/css/_layout/reward.styl
+++ b/source/css/_layout/reward.styl
@@ -125,6 +125,11 @@
     box-shadow: none;
   a
     color: var(--anzhiyu-white);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   i
     margin-right: 4px;
 
