--- a/source/css/_global/loading.styl
+++ b/source/css/_global/loading.styl
@@ -14,10 +14,7 @@ if hexo-config('preloader')
       display: none
 
   #loading-box
-    position: absolute;
-    top: 0;
-    width 100%
-    height 100%
+    user-select none
     .loading-img
       width: 100px;
       height: 100px;
