修复侧边栏文章与页面固定位置不正确问题

--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -355,6 +355,9 @@ li.card-category-list-item {
   #aside-content .sticky_layout {
     top: 60px;
   }
+  .post #aside-content .sticky_layout {
+    top: 80px;
+  }
 }
 
 /* 侧边栏归档 */
