1. 优化侧边栏评论按钮点击后被导航栏遮挡问题 2. 优化右键菜单逻辑代码 3. 修复繁简转化  4. 优化部分工具函数

--- a/layout/includes/anzhiyu/rightmenu-js.pug
+++ b/layout/includes/anzhiyu/rightmenu-js.pug
@@ -403,6 +403,11 @@ script.
       rm.hideRightMenu();
     });
 
+    document.getElementById("menu-translate").addEventListener("click", function () {
+      window.translateFn.translatePage();
+      rm.hideRightMenu();
+    });
+
     const menuLinks = document.querySelectorAll(".menu-link");
     menuLinks.forEach(function (link) {
       link.addEventListener("click", rm.hideRightMenu);
