--- a/source/css/_layout/comments.styl
+++ b/source/css/_layout/comments.styl
@@ -1,4 +1,6 @@
 #post-comment
+  padding-top: 60px;
+  margin-top: -60px;
   .comment-head
     margin-bottom: 20px
     font-size: 0.8em !important;
