--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -119,6 +119,13 @@
       opacity: 1;
       transform: none;
       visibility: visible;
+    &:hover
+      a
+        background: var(--anzhiyu-main);
+        -webkit-box-shadow: var(--anzhiyu-shadow-main);
+        box-shadow: var(--anzhiyu-shadow-main);
+        i
+          color: var(--anzhiyu-white);
     &::after
       --height: 2rem;
       content: attr(title);
