--- a/layout/includes/header/nav.pug
+++ b/layout/includes/header/nav.pug
@@ -20,7 +20,7 @@ nav#nav
 
     div.mask-name-container
       #name-container
-        a(id="page-name" href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
+        a#page-name(href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
       
     #menus
       !=partial('includes/header/menu_item', {}, {cache: true})
