--- a/source/css/_highlight/highlight/index.styl
+++ b/source/css/_highlight/highlight/index.styl
@@ -5,6 +5,12 @@ if $highlight_theme != false
   > header
     height 0
     text-indent:-9999px;
+    time, span
+      height: 0;
+      display: block;
+    h1
+      z-index: -1
+      pointer-events: none
     a
       background: none !important
       border-bottom: none !important
