--- a/layout/includes/page/fcircle.pug
+++ b/layout/includes/page/fcircle.pug
@@ -21,5 +21,5 @@ if theme.friends_vue.enable
     #hexo-circle-of-friends-root
 
   if (theme.friends_vue.apiurl)
-    include ../anzhiyu/random-friends-post-js.pug
+    script(defer data-pjax src="/js/anzhiyu/random-friends-post.js")
   script(defer data-pjax src=url_for(theme.friends_vue.vue_js))
