优化图片alt样式

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -347,8 +347,10 @@ if hexo-config('lazyload.enable') && hexo-config('lazyload.progressive') && !hex
   img[src=''], img:not([src]) 
     opacity 0
 .img-alt
-  margin: -10px 0 10px
-  color: #858585
+  font-size: 12px;
+  margin: 0;
+  margin-top: 8px;
+  color: var(--anzhiyu-secondtext);
 
   &:hover
     text-decoration: none !important
