--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -242,7 +242,9 @@
   white-space nowrap
   overflow hidden
 #site-name
-  padding 0 8px
+  padding 0 2px
+  height: 35px;
+  line-height: 35px;
   position relative
   display flex
   align-items center
