优化 AI摘要算法(更新可能导致TianliGpt需要重新获取获取摘要，谨慎更新或先将摘要本地化)

--- a/layout/includes/head/config.pug
+++ b/layout/includes/head/config.pug
@@ -144,8 +144,14 @@
     diytitle = JSON.stringify(theme.diytitle)
   }
 
+  let postHeadAiDescription = 'undefined'
+  if (theme.post_head_ai_description && theme.post_head_ai_description.enable) {
+    postHeadAiDescription = JSON.stringify(theme.post_head_ai_description)
+  }
+
 script.
   const GLOBAL_CONFIG = {
+    postHeadAiDescription: !{postHeadAiDescription},
     diytitle: !{diytitle},
     LA51: !{LA51},
     greetingBox: !{greetingBox},
