--- a/layout/includes/anzhiyu/ai-info.pug
+++ b/layout/includes/anzhiyu/ai-info.pug
@@ -19,10 +19,10 @@ if (pageFillDescription && ai)
           = gptName + " GPT"
     .ai-explanation AI初始化中...
     .ai-btn-box
-      .ai-btn-item 介绍自己
-      .ai-btn-item 生成本文简介
-      .ai-btn-item 推荐相关文章
-      .ai-btn-item 前往主页
+      .ai-btn-item 介绍自己 🙈
+      .ai-btn-item 生成本文简介 👋
+      .ai-btn-item 推荐相关文章 📖
+      .ai-btn-item 前往主页 🏠
       .ai-btn-item#go-tianli-blog 前往tianli博客
     script(data-pjax).
       var pageAi = "#{ai}"
