修复双栏时post_meta.page.date_type为both的标题溢出

--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -177,7 +177,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
           display: inline-block
-          bottom: 15px;
+          top: 90px
         else 
           display: flex;
           bottom: 30px;
