修复移动端文章列表文字位置异常

--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -177,7 +177,9 @@
           overflow: hidden;
           text-overflow: ellipsis;
           display: inline-block
-          top: 90px
+          bottom: 0px;
+          +maxWidth768()
+            bottom: 20px;
         else 
           display: flex;
           bottom: 30px;
