修复存在index_img时箭头按钮移动位置不正确 优化random-banner细节

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -588,6 +588,7 @@
   font-size: 1.2rem;
   padding: 0 5px;
   line-height: 2rem;
+  transition: color 0s;
 
 .post #blog_name #site-name .title
   transition 0s
