优化首页随便逛逛边角细节 AI摘要改为POST请求，支持绑定URL

--- a/source/css/_extra/home_top/swiperstyle.css
+++ b/source/css/_extra/home_top/swiperstyle.css
@@ -437,4 +437,5 @@ div#swiper_container:hover {
   display: flex !important;
   justify-content: space-around;
   flex-direction: row !important;
+  user-select: none;
 }
