--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -82,6 +82,8 @@
 
     .author-info-avatar 
       user-select: none
+      img
+        filter: blur(0) brightness(1);
       .author-status
         position: absolute;
         bottom: 2px;
