--- a/source/css/_search/algolia.styl
+++ b/source/css/_search/algolia.styl
@@ -138,6 +138,7 @@
   font-weight: 600;
   padding: 5px 10px;
   width: 100%;
+  transition: color 0s;
 
 #algolia-search .search-dialog .ais-Hits-list .search-result-tags a
   padding: 4px 8px;
