--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -434,6 +434,11 @@ blockquote {
     font-size: 20px;
     line-height: 20px;
     height 20px
+  .anzhiyufont.anzhiyu-icon-circle-dot
+    margin-left: auto;
+    margin-right: 4px;
+    font-size: 14px;
+    opacity: 0
   .anzhiyufont.anzhiyu-icon-arrow-rotate-right
     font-size: 14px;
     margin-left: 4px
@@ -448,7 +453,6 @@ blockquote {
   background-color: var(--anzhiyu-lighttext);
   color: rgba(255, 255, 255, 0.9);
   border-radius: 4px;
-  margin-left: auto;
   line-height: 1;
   padding: 4px 5px;
   cursor pointer
