AI语音按钮动画

--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -329,3 +329,11 @@ if hexo-config('avatar.effect') == true
 
   100%
     transform: translateX(200%)
+
+@keyframes breathe
+  0% 
+    transform: scale(.97);
+  50%
+    transform: scale(1.1);
+  100%
+    transform: scale(.97);
