--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -438,7 +438,9 @@ blockquote {
     margin-left: auto;
     margin-right: 4px;
     font-size: 14px;
-    opacity: 0
+    opacity: 0;
+    &:active
+      transform: scale(0.97);
   .anzhiyufont.anzhiyu-icon-arrow-rotate-right
     font-size: 14px;
     margin-left: 4px
