取消移动端侧边栏头像

--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -97,7 +97,7 @@
       transform: translate3d(-100%,0,0);
 
     & > .avatar-img
-      margin: 50px auto 20px
+      display: none
 
     .sidebar-site-data
       padding: 0 10px
