修复夜间模式顶栏hover异常 修复img-alt的友链异常

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -293,7 +293,7 @@
       transition 0.3s
 .post #nav 
   #menus .menus_item
-    &:hover a
+    &:hover > a
       color var(--anzhiyu-white)
       background var(--anzhiyu-white-op)
       transition 0.3s
