--- a/source/css/_page/flink.styl
+++ b/source/css/_page/flink.styl
@@ -382,6 +382,8 @@ body[data-type="link"]
       width: calc(100% / 7 - 16px);
       background: var(--anzhiyu-card-bg);
       box-shadow: var(--anzhiyu-shadow-border);
+      .img-alt
+        display: none
       +maxWidth1200()
         width: calc(20% - 16px) !important;
       +maxWidth900()
