--- a/source/css/_layout/home_top.styl
+++ b/source/css/_layout/home_top.styl
@@ -4,13 +4,13 @@
     display: flex;
     width: 100%;
     height: 76%;
-    background: var(--heo-card-bg);
+    background: var(--anzhiyu-card-bg);
     margin-bottom: 0.5rem;
     border: var(--style-border);
     border-radius: 12px;
     overflow: hidden;
     position: relative;
-    box-shadow: var(--heo-shadow-border);
+    box-shadow: var(--anzhiyu-shadow-border);
     flex-direction: column;
     overflow: hidden;
     transition: 0.3s;
